SERVER-14044 Invalid {$meta: 'text'} reference in agg $sort error message

Closes #737

Signed-off-by: Benety Goh <benety@mongodb.com>